5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1798_2573.log
== SUBMITION (2019-06-12 13:31:27) 
-- CODE:
from numpy import*
p=array(eval(input("peso:")))
a=array(eval(input("altura:")))

v=zeros(size(p),dtype=float)
h=0
for i in range(size(p)):
	IMC=round((p[i]/(a[i]**2)),2
	v[i]=IMC
	h+=1
print(v)
-- EXECUTION TIME:
0.903349
-- ERROR:
  File "/home/codebench/codes/1798/2573/main.py", line 9
    v[i]=IMC
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:32:01) 
-- CODE:
from numpy import*
p=array(eval(input("peso:")))
a=array(eval(input("altura:")))

v=zeros(size(p),dtype=float)
h=0
for i in range(size(p)):
	IMC=round((p[i]/(a[i]**2)),2)
	v[i]=IMC
	h+=1
print(v)
-- EXECUTION TIME:
1.00989
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:41:50) 
-- CODE:
from numpy import*
p=array(eval(input("peso:")))
a=array(eval(input("altura:")))

v=zeros(size(p),dtype=float)
h=0
for i in range(size(p)):
	IMC=round((p[i]/(a[i]**2)),2)
	v[i]=IMC
	h+=1
print(v)
print("O MAIOR IMC DA TURMA EH:",max(v))
if(max(v)<17):
	print("muito abaixo do peso".upper())
elif(max(v)>17 and max (v)<18.49):
	print("abaixo do peso".upper())
elif(max(v)>18.5 and max(v)<24.99):
	print("PESO NORMAL")
elif(max(v)>25 and max(v)<29.99):
	print("ACIMA DO PESO")
elif(max(v)>30 and max(v)<34.99):
	print("OBESIDADE")
elif(max(v)>35 and max(v<39.99)):
	print("OBESIDADE SEVERA")
elif(max(v)>40):
	print("OBESIDADE MORBIDA")
-- EXECUTION TIME:
1.08875
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
